@@ -1,3 +1,8 @@
+2003-07-15  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/eb40a_flash.c: Generic Atmel driver now supports boot blocks.
+	Other tweaks for the generic Atmel driver changes.
+
 2002-07-08  Tim Drury <tdrury@siliconmotorsports.com>
 
 	* devs/flash/arm/eb40a/...: new package.  FLASH memory support for
